[149] [visD] Resolve Nextbox Flicker
Original change's description:
> [visD] Resolve Nextbox Flicker
> 
> The zero state composebox fade in animation was causing issues with a
> flickering composebox. This happens when the user clicks outside of the
> composebox after the initial animation, which causes the animation state
> to go from expanding to undefined. When that happens, this style takes
> over and the fade-in animation will play for 50ms (which makes the
> opacity suddenly go to 0 then back to 1) which causes the "flicker".
> 
> Flicker Issue Screencast:
> screencast/cast/NDY3MDAyMzQ5Mzc0NjY4OHxkMTFjZTIzMi00OQ
> 
> Bug: 510771702
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7829559
> Commit-Queue: Gianni Chen <giannich@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#1627187}

Bug: 512479527
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7842058
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Bot-Commit: rubber-stamper@appspot.gserviceaccount.com <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7827@{#571}
Cr-Branched-From: 9f3e9aaccba63bd2ec30334e45e0bfd07ebcc8f1-refs/heads/main@{#1625079}

--- a/ui/webui/resources/cr_components/composebox/composebox.css
+++ b/ui/webui/resources/cr_components/composebox/composebox.css
@@ -117,6 +117,11 @@
   border-radius: var(--expanded-border-radius);
 }
 
+:host([energy-effect-animation-enabled]) {
+  /* Energy Effect Motion Curves */
+  --emphasized-accelerate-curve: cubic-bezier(0.3, 0, 0.8, 0.15);
+}
+
 #errorScrim {
   border-radius: inherit;
 }
@@ -178,6 +183,21 @@ search-animated-glow {
 :host([is-collapsible][expanding_]) #composebox {
   min-height: 136px;
   max-height: 254px;
+}
+
+:host([energy-effect-animation-enabled_][animation-state='expanding']) #composebox {
+  will-change: opacity;
+  animation: zero-state-composebox-fade-in 50ms
+      var(--emphasized-accelerate-curve) both;
+}
+
+@keyframes zero-state-composebox-fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 :host([is-collapsible][expanding_][show-file-carousel][carousel-on-top_]) #composebox {
